refactor(component): Refactored the navigation bar menu component

--- a/src/components/navigation-bar/NavigationBarMenu.scss
+++ b/src/components/navigation-bar/NavigationBarMenu.scss
@@ -1,5 +1,7 @@
 .navigation-bar__menu {
 	& .navigation-bar__menu__link {
+		color: aliceblue;
 		text-decoration: none;
+		text-transform: uppercase;
 	}
 }
