refactor(minor): Minor refactoring

--- a/src/index.scss
+++ b/src/index.scss
@@ -102,3 +102,8 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+
+$main-gap-1: 2em;
+$main-gap-2: 1.375em;
+
+$secondary-gap-1: 0.75em;
