--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
 .app {
-	background-image: url('./assets/images/evx-bg-4.jpg');
+	//background-image: url('./assets/images/evx-bg-4.jpg');
+	background: radial-gradient(
+		circle at 3% 25%,
+		rgba(33, 150, 243, 1) 0%,
+		rgba(63, 81, 181, 1) 100%
+	);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
