--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,3 +1,5 @@
+@use '../../index';
+
 .footer {
 	display: flex;
 	justify-content: space-around;
@@ -5,12 +7,18 @@
 	backdrop-filter: blur(2.5px) saturate(180%);
 	-webkit-backdrop-filter: blur(2.5px) saturate(180%);
 	background-color: rgba(20, 21, 24, 0.664);
-}
 
-.footer__logo {
-	display: inline-block;
-	& img {
-		cursor: pointer;
-		width: 6%;
+	& .footer__logo {
+		display: inline-block;
+
+		& img {
+			cursor: pointer;
+			width: 6%;
+		}
+	}
+
+	& .footer__links {
+		display: flex;
+		gap: index.$secondary-gap-1;
 	}
 }
