--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,18 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+.app__loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+
+	background: radial-gradient(
+		circle at 3% 25%,
+		rgba(33, 150, 243, 1) 0%,
+		rgba(63, 81, 181, 1) 100%
+	);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
