--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -17,4 +17,26 @@
 		color: white;
 		cursor: pointer;
 	}
+
+	& button.button {
+		background-image: linear-gradient(
+			-45deg,
+			rgba(9, 28, 60, 1) 0%,
+			rgba(67, 46, 103, 1) 100%
+		);
+	}
+	& button.submit {
+		background-image: linear-gradient(
+			-45deg,
+			rgba(9, 28, 60, 1) 0%,
+			rgb(46, 103, 54) 100%
+		);
+	}
+	& button.reset {
+		background-image: linear-gradient(
+			-45deg,
+			rgba(9, 28, 60, 1) 0%,
+			rgb(204, 27, 27) 100%
+		);
+	}
 }
